--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -4,5 +4,6 @@ tile.magnifier.name=Magnifier
 tile.assembly_table.name=Magnifier
 
 item.laser_pen.name=Laser Pen
+item.screw_driver.name=Screw Driver
 
 itemGroup.refraction=Refraction
