--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -1,5 +1,5 @@
 tile.mirror.name=Mirror
-tile.lens.name=Lense
+tile.lens.name=Lens
 tile.magnifier.name=Magnifier
 tile.assembly_table.name=Laser Assembly Table
 tile.laser.name=Light Amplification By Stimulated Emissions Ouput Device
