--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -1,19 +1,27 @@
-tile.mirror.name=Mirror
-tile.lens.name=Lens
-tile.magnifier.name=Magnifier
-tile.assembly_table.name=Laser Assembly Table
-tile.laser.name=Light Amplification By Stimulated Emissions of Radiation Output Device
-tile.prism.name=Triangular Light Trifurcation Prism
+tile.refraction:mirror.name=Light Beam Reflection Pad
+tile.refraction:splitter.name=Light Beam Incurvation Pad
+tile.refraction:lens.name=Light Beam Diverging Cell
+tile.refraction:magnifier.name=Light Beam Dilation Device
+tile.refraction:assembly_table.name=Laser Assembly Table
+tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Device
+tile.refraction:prism.name=Triangular Light Trifurcation Prism
+tile.refraction:disco_ball.name=Spherical Reflective Alloy Encrusted Rotatory
+tile.refraction:reflection_chamber.name=Light Beam Coalescing Cube
+tile.refraction:electron_exciter.name=Electron Excitation Chamber
+tile.refraction:sensor.name=Light Beam Identification Pole
+tile.refraction:spectrometer.name=Light Beam Color Balance Testing Device
+tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativity
 
-item.laser_pen.name=Laser Pen
-item.screw_driver.0.name=Screw Driver (5°)
-item.screw_driver.1.name=Screw Driver (22.5°)
-item.screw_driver.2.name=Screw Driver (45°)
-item.screw_driver.3.name=Screw Driver (90°)
-item.screw_driver.4.name=Screw Driver (1/8°)
-item.screw_driver.5.name=Screw Driver (1/4°)
-item.screw_driver.6.name=Screw Driver (1/2°)
-item.screw_driver.7.name=Screw Driver (1°)
+item.refraction:laser_pen.name=Laser Pen
+item.refraction:screw_driver.0.name=Screw Driver (5°)
+item.refraction:screw_driver.1.name=Screw Driver (22.5°)
+item.refraction:screw_driver.2.name=Screw Driver (45°)
+item.refraction:screw_driver.3.name=Screw Driver (90°)
+item.refraction:screw_driver.4.name=Screw Driver (1/8°)
+item.refraction:screw_driver.5.name=Screw Driver (1/4°)
+item.refraction:screw_driver.6.name=Screw Driver (1/2°)
+item.refraction:screw_driver.7.name=Screw Driver (1°)
+item.refraction:reflective_alloy.name=Reflective Alloy
 
 gui.screw_driver.angle.0=5°
 gui.screw_driver.angle.1=22.5°
