rebalanced and added all the recipies. finalized jei integration. tweaked discoball rotation to end after rotation is 0

--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -5,7 +5,7 @@ tile.refraction:magnifier.name=Light Beam Dilation Device
 tile.refraction:assembly_table.name=Laser Assembly Table
 tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Device
 tile.refraction:prism.name=Triangular Light Trifurcation Prism
-tile.refraction:disco_ball.name=Spherical Reflective Alloy Encrusted Rotatory
+tile.refraction:disco_ball.name=Spherical Diamond Encrusted Rotatory
 tile.refraction:reflection_chamber.name=Light Beam Coalescing Cube
 tile.refraction:electron_exciter.name=Electron Excitation Chamber
 tile.refraction:sensor.name=Light Beam Identification Pole
