--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -11,6 +11,7 @@ tile.refraction:electron_exciter.name=Electron Excitation Chamber
 tile.refraction:sensor.name=Light Beam Identification Pole
 tile.refraction:spectrometer.name=Light Beam Color Balance Testing Device
 tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativity
+tile.refraction:optic_fiber.name=Optical Fibril Coaxial
 
 item.refraction:laser_pen.name=Laser Pen
 item.refraction:screw_driver.0.name=Screw Driver (5°)
@@ -36,6 +37,7 @@ simple_name.refraction:electron_exciter=&7Electron Exciter
 simple_name.refraction:sensor=&7Sensor
 simple_name.refraction:spectrometer=&7Spectrometer
 simple_name.refraction:creative_laser=&7Creative Laser
+simple_name.refraction:optic_fiber=&7Optic Fiber
 
 gui.screw_driver.angle.0=5°
 gui.screw_driver.angle.1=22.5°
@@ -47,3 +49,4 @@ gui.screw_driver.angle.6=1/2°
 gui.screw_driver.angle.7=1°
 
 itemGroup.refraction=Refraction
+refraction.jei.assembly_table=Assembly Table
