--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -24,6 +24,7 @@ item.refraction:screw_driver.5.name=Screw Driver (1/4°)
 item.refraction:screw_driver.6.name=Screw Driver (1/2°)
 item.refraction:screw_driver.7.name=Screw Driver (1°)
 item.refraction:reflective_alloy.name=Reflective Alloy
+item.refraction:book_creator.name=Book
 
 simple_name.refraction:mirror=&7Mirror
 simple_name.refraction:splitter=&7Splitter
