--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -1,3 +1,4 @@
+
 tile.refraction:mirror.name=Light Beam Reflection Pad
 tile.refraction:splitter.name=Light Beam Incurvation Pad
 tile.refraction:lens.name=Light Beam Diverging Cell
@@ -12,6 +13,7 @@ tile.refraction:sensor.name=Light Beam Identification Pole
 tile.refraction:spectrometer.name=Light Beam Color Balance Testing Device
 tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativity
 tile.refraction:optic_fiber.name=Optical Fibril Coaxial
+tile.refraction:translocator.name=Photovoltaic Teleposition Array
 tile.refraction:reflective_alloy_block.name=Reflective Alloy Block
 
 item.refraction:laser_pen.name=Laser Pen
@@ -40,6 +42,7 @@ simple_name.refraction:sensor=&7Sensor
 simple_name.refraction:spectrometer=&7Spectrometer
 simple_name.refraction:creative_laser=&7Creative Laser
 simple_name.refraction:optic_fiber=&7Optic Fiber
+simple_name.refraction:translocator=&7Beam Translocator
 simple_name.refraction:reflective_alloy_block=&7Reflective Alloy Block
 
 gui.screw_driver.angle.0=5°
