--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -17,14 +17,14 @@ tile.refraction:translocator.name=Photovoltaic Teleposition Array
 tile.refraction:reflective_alloy_block.name=Reflective Alloy Block
 
 item.refraction:laser_pen.name=Laser Pen
-item.refraction:screw_driver.0.name=Screw Driver (5°)
-item.refraction:screw_driver.1.name=Screw Driver (22.5°)
-item.refraction:screw_driver.2.name=Screw Driver (45°)
-item.refraction:screw_driver.3.name=Screw Driver (90°)
-item.refraction:screw_driver.4.name=Screw Driver (1/8°)
-item.refraction:screw_driver.5.name=Screw Driver (1/4°)
-item.refraction:screw_driver.6.name=Screw Driver (1/2°)
-item.refraction:screw_driver.7.name=Screw Driver (1°)
+item.refraction:screw_driver.0.name=Screwdriver (1/8°)
+item.refraction:screw_driver.1.name=Screwdriver (1/4°)
+item.refraction:screw_driver.2.name=Screwdriver (1/2°)
+item.refraction:screw_driver.3.name=Screwdriver (1°)
+item.refraction:screw_driver.4.name=Screwdriver (5°)
+item.refraction:screw_driver.5.name=Screwdriver (22 1/2°)
+item.refraction:screw_driver.6.name=Screwdriver (45°)
+item.refraction:screw_driver.7.name=Screwdriver (90°)
 item.refraction:reflective_alloy.name=Reflective Alloy
 item.refraction:book_creator.name=Book
 
