--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -15,6 +15,7 @@ tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativi
 tile.refraction:optic_fiber.name=Optical Fibril Coaxial
 tile.refraction:translocator.name=Photovoltaic Teleposition Array
 tile.refraction:reflective_alloy_block.name=Reflective Alloy Block
+tile.refraction:axyz.name=Asynchronous Force-Defined Quantum Translocational Anomaly
 
 item.refraction:laser_pen.name=Laser Pen
 item.refraction:screw_driver.0.name=Screwdriver (1/8°)
@@ -44,6 +45,7 @@ simple_name.refraction:creative_laser=&7Creative Laser
 simple_name.refraction:optic_fiber=&7Optic Fiber
 simple_name.refraction:translocator=&7Beam Translocator
 simple_name.refraction:reflective_alloy_block=&7Reflective Alloy Block
+simple_name.refraction:axyz=&7Piston-Based Beam Relocator
 
 gui.screw_driver.angle.0=1/8°
 gui.screw_driver.angle.1=1/4°
