--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -2,15 +2,15 @@
 tile.refraction:mirror.name=Light Beam Reflection Pad
 tile.refraction:splitter.name=Light Beam Incurvation Pad
 tile.refraction:lens.name=Light Beam Diverging Cell
-tile.refraction:magnifier.name=Light Beam Dilation Device
+tile.refraction:magnifier.name=Light Beam Dilation Creativeice
 tile.refraction:assembly_table.name=Laser Assembly Table
-tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Device
+tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Creativeice
 tile.refraction:prism.name=Triangular Light Trifurcation Prism
 tile.refraction:disco_ball.name=Spherical Diamond Encrusted Rotatory
 tile.refraction:reflection_chamber.name=Light Beam Coalescing Cube
 tile.refraction:electron_exciter.name=Electron Excitation Chamber
 tile.refraction:sensor.name=Light Beam Identification Pole
-tile.refraction:spectrometer.name=Light Beam Color Balance Testing Device
+tile.refraction:spectrometer.name=Light Beam Color Balance Testing Creativeice
 tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativity
 tile.refraction:optic_fiber.name=Optical Fibril Coaxial
 tile.refraction:translocator.name=Photovoltaic Teleposition Array
@@ -20,20 +20,20 @@ tile.refraction:axyz.0.name=AFDQTA (Asynchronous Force-Defined Quantum Transloca
 tile.refraction:axyz.1.name=AFDQTA (Absolutely Fantastic Duck-Question True Asker)
 tile.refraction:axyz.2.name=AFDQTA (Anglican-French Deal Questioning Trade Agreements)
 tile.refraction:axyz.3.name=AFDQTA (Articulated Fluctuating Deformed Quantum Tethering Actuators)
-tile.refraction:axyz.4.name=AFDQTA (Atypically Formed Devolved Quantum Tunnel Actualizer)
+tile.refraction:axyz.4.name=AFDQTA (Atypically Formed Creativeolved Quantum Tunnel Actualizer)
 tile.refraction:axyz.5.name=AFDQTA (A Friggin Daunting Quantum Tuberous Array)
 tile.refraction:axyz.6.name=AFDQTA (Apart, Fools Do Question True Agnomens)
 tile.refraction:axyz.7.name=AFDQTA (Attacking, Flampling Demon Quests To Agadeem)
 tile.refraction:axyz.8.name=AFDQTA (A Fool Doesn't Question This Acronym)
 
-tile.refraction:filter_white.name=White Dev Filter
-tile.refraction:filter_red.name=Red Dev Filter
-tile.refraction:filter_green.name=Green Dev Filter
-tile.refraction:filter_blue.name=Blue Dev Filter
-tile.refraction:filter_cyan.name=Cyan Dev Filter
-tile.refraction:filter_yellow.name=Yellow Dev Filter
-tile.refraction:filter_magenta.name=Magenta Dev Filter
-tile.refraction:filter_pink.name=Pink Dev Filter
+tile.refraction:filter_white.name=White Creative Filter
+tile.refraction:filter_red.name=Red Creative Filter
+tile.refraction:filter_green.name=Green Creative Filter
+tile.refraction:filter_blue.name=Blue Creative Filter
+tile.refraction:filter_cyan.name=Cyan Creative Filter
+tile.refraction:filter_yellow.name=Yellow Creative Filter
+tile.refraction:filter_magenta.name=Magenta Creative Filter
+tile.refraction:filter_pink.name=Pink Creative Filter
 
 
 item.refraction:laser_pen.name=Laser Pen
