finish translocation fix

--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -20,7 +20,7 @@ tile.refraction:axyz.0.name=AFDQTA (Asynchronous Force-Defined Quantum Transloca
 tile.refraction:axyz.1.name=AFDQTA (Absolutely Fantastic Duck-Question True Asker)
 tile.refraction:axyz.2.name=AFDQTA (Anglican-French Deal Questioning Trade Agreements)
 tile.refraction:axyz.3.name=AFDQTA (Articulated Fluctuating Deformed Quantum Tethering Actuators)
-tile.refraction:axyz.4.name=AFDQTA (Atypically Formed Creativeolved Quantum Tunnel Actualizer)
+tile.refraction:axyz.4.name=AFDQTA (Atypically Formed Devolved Quantum Tunnel Actualizer)
 tile.refraction:axyz.5.name=AFDQTA (A Friggin Daunting Quantum Tuberous Array)
 tile.refraction:axyz.6.name=AFDQTA (Apart, Fools Do Question True Agnomens)
 tile.refraction:axyz.7.name=AFDQTA (Attacking, Flampling Demon Quests To Agadeem)
