compileOnly for oneprobe to make it run. cleaned TODOs and still working on the sound manager

--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -10,7 +10,7 @@ tile.refraction:disco_ball.name=Spherical Diamond Encrusted Rotatory
 tile.refraction:reflection_chamber.name=Light Beam Coalescing Cube
 tile.refraction:electron_exciter.name=Electron Excitation Chamber
 tile.refraction:sensor.name=Light Beam Identification Pole
-tile.refraction:spectrometer.name=Light Beam Color Balance Testing Creativeice
+tile.refraction:spectrometer.name=Light Beam Color Balance Testing Device
 tile.refraction:creative_laser.name=Quantum Cascading Laser Of Infinite Creativity
 tile.refraction:optic_fiber.name=Optical Fibril Coaxial
 tile.refraction:translocator.name=Photovoltaic Teleposition Array
