--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -67,6 +67,17 @@ simple_name.refraction:translocator=&7Beam Translocator
 simple_name.refraction:reflective_alloy_block=&7Reflective Alloy Block
 simple_name.refraction:axyz=&7Piston-Based Beam Relocator
 
+achievement.refraction.light_bridge=Don't rub your cheek on it
+achievement.refraction.light_bridge.desc=Create light bridges
+achievement.refraction.translocator=It's not a bug, It's a feature!
+achievement.refraction.translocator.desc=Craft a translocator block
+achievement.refraction.prism=Taste The Rainbow
+achievement.refraction.prism.desc=Craft a prism block
+achievement.refraction.laser=TEH KITTEH LAZOR
+achievement.refraction.laser.desc=Make a laser pen and make cats go nuts
+achievement.refraction.grenade=Combustible Lemons
+achievement.refraction.grenade.desc=Craft a photon grenade
+
 gui.screw_driver.angle.0=1/8°
 gui.screw_driver.angle.1=1/4°
 gui.screw_driver.angle.2=1/2°
