added the achievements in

--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -69,7 +69,7 @@ simple_name.refraction:axyz=&7Piston-Based Beam Relocator
 
 achievement.refraction.light_bridge=Don't rub your cheek on it
 achievement.refraction.light_bridge.desc=Create light bridges
-achievement.refraction.translocator=It's not a bug, It's a feature!
+achievement.refraction.translocator=Thinking With Portals
 achievement.refraction.translocator.desc=Craft a translocator block
 achievement.refraction.prism=Taste The Rainbow
 achievement.refraction.prism.desc=Craft a prism block
