--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -4,7 +4,8 @@ tile.refraction:splitter.name=Light Beam Incurvation Pad
 tile.refraction:lens.name=Light Beam Diverging Cell
 tile.refraction:magnifier.name=Light Beam Dilation Device
 tile.refraction:assembly_table.name=Laser Assembly Table
-tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Creativeice
+tile.refraction:laser.name=Light Amplification By Stimulated Emissions of Radiation Output Device
+tile.refraction:electric_laser.name=Electron-Based Linear Focused Photon Wave Exitation Device
 tile.refraction:prism.name=Triangular Light Trifurcation Prism
 tile.refraction:disco_ball.name=Spherical Diamond Encrusted Rotatory
 tile.refraction:reflection_chamber.name=Light Beam Coalescing Cube
@@ -48,6 +49,11 @@ item.refraction:screw_driver.7.name=Screwdriver (90°)
 item.refraction:reflective_alloy.name=Reflective Alloy
 item.refraction:book_creator.name=Book
 item.refraction:grenade.name=Photon Grenade
+item.refraction:ref_alloy_helmet.name=Reflective Mask
+item.refraction:ref_alloy_chestplate.name=Reflective Breastplate
+item.refraction:ref_alloy_leggings.name=Reflective Braces
+item.refraction:ref_alloy_boots.name=Reflective Boots
+item.refraction:photon_cannon.name=Photon Cannon
 
 simple_name.refraction:mirror=&7Mirror
 simple_name.refraction:splitter=&7Splitter
@@ -66,6 +72,7 @@ simple_name.refraction:optic_fiber=&7Optic Fiber
 simple_name.refraction:translocator=&7Beam Translocator
 simple_name.refraction:reflective_alloy_block=&7Reflective Alloy Block
 simple_name.refraction:axyz=&7Piston-Based Beam Relocator
+simple_name.refraction:electric_laser=&7Electric Laser
 
 achievement.refraction.light_bridge=Don't rub your cheek on it
 achievement.refraction.light_bridge.desc=Create light bridges
