fixed effect place and made it place in mid air, also fixed critical bug with chance calculation for effects

--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -35,6 +35,7 @@ tile.refraction:filter_cyan.name=Cyan Creative Filter
 tile.refraction:filter_yellow.name=Yellow Creative Filter
 tile.refraction:filter_magenta.name=Magenta Creative Filter
 tile.refraction:filter_pink.name=Pink Creative Filter
+tile.refraction:filter_orange.name=Orange Creative Filter
 
 
 item.refraction:laser_pen.name=Laser Pen
