--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -55,6 +55,7 @@ item.refraction:ref_alloy_chestplate.name=Reflective Breastplate
 item.refraction:ref_alloy_leggings.name=Reflective Braces
 item.refraction:ref_alloy_boots.name=Reflective Boots
 item.refraction:photon_cannon.name=Photon Cannon
+item.refraction:book.name=Information Tablet
 
 simple_name.refraction:mirror=&7Mirror
 simple_name.refraction:splitter=&7Splitter
@@ -74,6 +75,7 @@ simple_name.refraction:translocator=&7Beam Translocator
 simple_name.refraction:reflective_alloy_block=&7Reflective Alloy Block
 simple_name.refraction:axyz=&7Piston-Based Beam Relocator
 simple_name.refraction:electric_laser=&7Electric Laser
+simple_name.refraction:book=&7Guide Book
 
 achievement.refraction.light_bridge=Don't rub your cheek on it
 achievement.refraction.light_bridge.desc=Create light bridges
