--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -26,6 +26,7 @@ tile.refraction:axyz.5.name=AFDQTA (A Friggin Daunting Quantum Tuberous Array)
 tile.refraction:axyz.6.name=AFDQTA (Apart, Fools Do Question True Agnomens)
 tile.refraction:axyz.7.name=AFDQTA (Attacking, Flampling Demon Quests To Agadeem)
 tile.refraction:axyz.8.name=AFDQTA (A Fool Doesn't Question This Acronym)
+tile.refraction:axyz.9.name=AFDQTA (Atomically Flan Decrementing Quality Total Annihilator)
 
 tile.refraction:filter_white.name=White Creative Filter
 tile.refraction:filter_red.name=Red Creative Filter
