--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -138,7 +138,7 @@ refraction.book.start.shiny.content1=Neither gold nor iron have the reflective p
 
 refraction.book.start.reflection.title=Reflection
 refraction.book.start.reflection.desc=Mirror Array
-refraction.book.start.reflection.content1=Now that you have more reflective resources, you can dispense with the annoyance of placing the [recipe:refraction:magnifier] exactly above the table. By creating a Mirror with reflective alloys and rotating it using a [recipe:refraction:screw_driver] you can redirect beams to any direction.
+refraction.book.start.reflection.content1=Now that you have more reflective resources, you can dispense with the annoyance of placing &1&lMagnifier&r exactly above the table. By creating a Mirror with reflective alloys and rotating it using a &1&lScrewdriver&r you can redirect beams to any direction.
 refraction.book.start.reflection.content2=You can craft a Mirror using the assembly table you crafted. The Assembly table will allow you to make such materials, by using magnifiers to focus beams into it and providing a &lredstone signal&r, it will fuse the items inside of it together provided the beams being pointed into it evaluate to the correct color range and add up to the proper beam strength value (that also has a max and min per recipe).
 refraction.book.start.reflection.content3=&lIN LAYMAN'S TERMS:&r Each assembly table recipe requires different colored beams to be pointed at it and a specific alpha value range that needs to be met for it to be able to craft your item.&r
 refraction.book.start.reflection.content4=If you focus multiple beams into an assembly table, it'll be able to do more intense recipes, granting you more components to play with which you can read about later. For now, let me tell you how to craft the mirror:
@@ -151,7 +151,7 @@ refraction.book.start.reflection.content9=Using the screwdriver on the air will 
 refraction.book.start.refraction.title=Refraction
 refraction.book.start.refraction.desc=TODO
 refraction.book.start.refraction.content1=So far, you've only witnessed thin white beams, let's change it up a bit!
-refraction.book.start.refraction.content2=Different colors of beams can produce some effects. These effects can be highly beneficial to your needs, or just plain fun. I'll get to these effects later on, but to acquire them, you'll want to craft yourself a [recipe:refraction:prism].
+refraction.book.start.refraction.content2=Different colors of beams can produce some effects. These effects can be highly beneficial to your needs, or just plain fun. I'll get to these effects later on, but to acquire them, you'll want to craft yourself a &1&lPrism&r.
 refraction.book.start.refraction.content3=This particular block will split a light beam into it's three basic colors: red, green, and blue. We'll get to the effects of these colors later on, as I've already said, but to acquire this block, you'll want a minimum of 2 mirrors all pointing into the assembly table with beams from magnifiers on each of them.
 refraction.book.start.refraction.content4=Next, right click the assembly table with 6 lens blocks to input the items and provide a redstone signal to the table and it will craft you your first prism
 refraction.book.start.refraction.content5=&c&l[!] WARNING [!]&r Do NOT place the prism in front of a beam just yet. Please read the next section before proceeding because the next part can be lethal to both your person and your surroundings if caution is not taken!
@@ -177,7 +177,7 @@ refraction.book.start.effects.content8=Orange: When pointed at a redstone compon
 
 refraction.book.start.merging.title=Merging
 refraction.book.start.merging.desc=TODO
-refraction.book.start.merging.content1=Due to much confusion relating to the crafting of blocks, I shall guide you on how to make the [recipe:refraction:reflection_chamber] step by step to help you out.
+refraction.book.start.merging.content1=Due to much confusion relating to the crafting of blocks, I shall guide you on how to make the &1&lReflaction Chamber&r step by step to help you out.
 refraction.book.start.merging.content2=First of all, looking at the recipe: it requires 'half green' (since we work with ratios in the 3 colors), no blue, and full red. IE: We need twice as much red than green.
 refraction.book.start.merging.content3=When you split a beam in a prism into 3 beams (red, green and blue), the alpha value of the original beam also splits. So each of the 3 colored beams you have are each [config:solar_strength] / 3. So you'll need to take this into account to get enough summative alpha into the assembly table.
 refraction.book.start.merging.content4=If the pack author has not tampered with anything: The default solar alpha of magnifiers is 16, so 16 / 3 = ~5. The cube's recipe requires a MINIMUM of 16, so we need at least (16 / 5) ~3.2 beams into the table. So round up to 4 beams.
@@ -269,9 +269,9 @@ refraction.book.blocks.exciter.content4=My friend, GlAdOs, told me to send you t
 refraction.book.blocks.axyz.title=AXYZ
 refraction.book.blocks.axyz.desc=TODO
 refraction.book.blocks.axyz.content1=I was told that this technology isn't quite advanced enough yet, as it can generate wormholes, but only photons can pass through, while matter, on the other hand, cannot. Any beam that goes in will come out the other end, but the wormhole isn’t stable enough to work the other way around. The tear in space and time isn't big nor powerful enough to do anything but transport beams.
-refraction.book.blocks.axyz.content2=The mechanics of this device are unusual to say the least. It says here that you need to feed a dispersion beam (magenta) into a [recipe:refraction:translocator] pointed directly at the generator, via fiber optic cables hooked into the translocator.
+refraction.book.blocks.axyz.content2=The mechanics of this device are unusual to say the least. It says here that you need to feed a dispersion beam (magenta) into a &1&lTranslocator&r pointed directly at the generator, via fiber optic cables hooked into the translocator.
 refraction.book.blocks.axyz.content3=Apparently, passing a dispersion beam through the translocator will cause it to affect the wormhole generator, causing the generator to be pushed directly away from the translocator. What seems to be happening here is that you are displacing the wormhole generator, but not the other end of the wormhole, allowing you to separate the two ends. 
-refraction.book.blocks.axyz.content4=The [recipe:refraction:axyz] is also pushable by a piston. Unlike using a dispersion beam, pushing the wormhole generator via a piston will also move the bound wormhole. Therefore, the wormhole will shift in the same direction in which the generator is pushed. A 'quantum entanglement' of sorts.
+refraction.book.blocks.axyz.content4=The &1&lAXYZ&r is also pushable by a piston. Unlike using a dispersion beam, pushing the wormhole generator via a piston will also move the bound wormhole. Therefore, the wormhole will shift in the same direction in which the generator is pushed. A 'quantum entanglement' of sorts.
 refraction.book.blocks.axyz.content5=By repeating the process of using teleposers and pistons on the generator, you can treat the generator like a 'cursor' to move the wormhole freely in the world. This can allow for some more advanced machines such as automatically moving quarries.
 
 
