--- a/src/main/resources/assets/refraction/lang/zh_CN.lang
+++ b/src/main/resources/assets/refraction/lang/zh_CN.lang
@@ -28,15 +28,15 @@ tile.refraction:axyz.7.name=AFDQTA (Attacking, Flampling Demon Quests To Agadeem
 tile.refraction:axyz.8.name=AFDQTA (A Fool Doesn't Question This Acronym 就是傻子也不会对这个首字母缩略词有疑问)
 tile.refraction:light_bridge.name=光桥
 
-tile.refraction:filter_white.name=白色创造滤镜
-tile.refraction:filter_red.name=红色创造滤镜
-tile.refraction:filter_green.name=绿色创造滤镜
-tile.refraction:filter_blue.name=蓝色创造滤镜
-tile.refraction:filter_cyan.name=青色创造滤镜
-tile.refraction:filter_yellow.name=黄色创造滤镜
-tile.refraction:filter_magenta.name=品红色创造滤镜
-tile.refraction:filter_pink.name=粉色创造滤镜
-tile.refraction:filter_orange.name=橙色创造滤镜
+tile.refraction:filter_white.name=白色过滤器
+tile.refraction:filter_red.name=红色过滤器
+tile.refraction:filter_green.name=绿色过滤器
+tile.refraction:filter_blue.name=蓝色过滤器
+tile.refraction:filter_cyan.name=青色过滤器
+tile.refraction:filter_yellow.name=黄色过滤器
+tile.refraction:filter_magenta.name=品红色过滤器
+tile.refraction:filter_pink.name=粉色过滤器
+tile.refraction:filter_orange.name=橙色过滤器
 
 
 item.refraction:laser_pen.name=激光笔
